# vr

./: CMakeLists.txt  LICENSE.rst  README.md
camera_calibration/: AcquisitionImage.qml  CMakeLists.txt  ValidateImage.qml  cameracalibrationfilter.cpp  cameracalibrationfilter.h  cameracalibrator.cpp  cameracalibrator.h  main.cpp  main.qml  qml.qrc  timer.hpp
markergen/: CMakeLists.txt
markergen/include/: options.hpp
markergen/src/: main.cpp  options.cpp
